# mc-panel

./: .gitignore  README.md  backup.py  pyproject.toml  run.py  uv.toml
backend/: requirements.txt
backend/app/: archive_manager.py  basemap.py  bluemap.py  bridge.py  chat.py  config.py  cqcode.py  database.py  deps.py  jar_cache.py  java.py  jobs.py  litematica.py  main.py  mcdr.py  mod_manager.py  mod_presets.py  models.py  net.py  onebot.py  pb.py  pcrc.py  players.py  plugin_manager.py  plugin_presets.py  plugin_scan.py  ports.py  proxy.py  rcon.py  schemas.py  security.py  stats.py  superflat.py  verification.py  versions.py  worldmap.py
backend/app/routers/: archives.py  auth.py  chat.py  configs.py  groups.py  jobs.py  litematica.py  modconfigs.py  mods.py  pb.py  pcrc.py  players.py  plugins.py  servers.py  settings.py  stats.py  system.py  tools.py  users.py  worldmap.py
backend/default_config/: QuickBackupM.json  auto_plugin_reloader.json  bili_live_helper.json  joinMOTD.json  prime_backup.json
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  index.css  main.tsx
web/src/api/: archives.ts  auth.ts  chat.ts  client.ts  configs.ts  groups.ts  jobs.ts  litematica.ts  modconfigs.ts  mods.ts  pb.ts  pcrc.ts  players.ts  plugins.ts  servers.ts  settings.ts  stats.ts  system.ts  tools.ts  users.ts  worldmap.ts
web/src/components/: ChunkLoadBoundary.tsx  Pagination.tsx  ServerConsoleDialog.tsx  ServerPickerDialog.tsx  VerifyPanel.tsx  auth-context.ts  auth.tsx
web/src/i18n/: index.tsx
(+27 files in other folders)
