[project]
name = "mc-panel"
version = "0.1.0"
description = "Minecraft 服务器管理面板(FastAPI · SQLite · 托管 MCDReforged 实例)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "psutil>=5.9",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "nbtlib>=2.0",
    # Litematica 投影解析(.litematic → 指令清单)
    "litemapy>=0.9",
    # 被管理的 MCDR 实例以 `<python> -m mcdreforged` 启动;装进同一环境,
    # 默认即用后端自身解释器(见 config.DEFAULT_PYTHON_EXECUTABLE),开箱即用。
    "mcdreforged>=2.13",
    "websockets",
    "pillow",
    "scipy",
    "numpy",
    "matplotlib",
    # TODO: 以下三个包不在 PyPI(官方/清华均 404),被 pcrc.py/chat.py/onebot.py/pb.py 引用,
    #       需用 git 依赖或本地源加回(待确认来源):
    #   "pcrc"(PCRC 录像)、"pyncm" / "pyncm-async"(网易云解析)
]

# 应用而非可发布的库:代码在 backend/app,由 run.py 运行时把 backend 加入 sys.path 后导入。
[tool.uv]
package = false
